src/tests/snapshots/gitu__tests__binary_file.snap
---
source: src/tests/mod.rs
expression: ctx.redact_buffer()
---
 main                                                                           |
                                                                                |
 Staged changes (1)                                                             |
▌added      binary-file                                                         |
                                                                                |
 Recent commits                                                                 |
 b66a0bf main origin/main add initial-file                                      |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
styles_hash: 33d1367ef0f2748e
