src/tests/snapshots/gitu__tests__chmod_file.snap
---
source: src/tests/mod.rs
expression: ctx.redact_buffer()
---
▌main                                                                           |
                                                                                |
 Unstaged changes (1)                                                           |
 modified   test-file                                                           |
                                                                                |
 Recent commits                                                                 |
 d95f7af main add test-file                                                     |
 b66a0bf origin/main add initial-file                                           |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
styles_hash: ca91d6880717ff58
