src/tests/snapshots/gitu__tests__collapsed_sections_config.snap
---
source: src/tests/mod.rs
expression: ctx.redact_buffer()
---
▌main                                                                           |
                                                                                |
 Untracked files…                                                               |
                                                                                |
 Recent commits…                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
styles_hash: 3c5c01a503e24220
