src/tests/snapshots/gitu__tests__copied_file.snap
---
source: src/tests/mod.rs
expression: ctx.redact_buffer()
---
▌main                                                                           |
                                                                                |
 Unstaged changes (1)                                                           |
 added      copied-file…                                                        |
                                                                                |
 Recent commits                                                                 |
 b00a756 main add new-file                                                      |
 b66a0bf origin/main add initial-file                                           |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
styles_hash: afbe1547f8966b30
