src/tests/snapshots/gitu__tests__crlf_diff.snap
---
source: src/tests/mod.rs
expression: ctx.redact_buffer()
---
▌main                                                                           |
                                                                                |
 Unstaged changes (1)                                                           |
 modified   crlf.txt                                                            |
 @@ -1,2 +1,2 @@                                                                |
  unchanged                                                                     |
 -unchanged                                                                     |
 +changed                                                                       |
                                                                                |
 Recent commits                                                                 |
 13d662a main add crlf.txt                                                      |
 b66a0bf origin/main add initial-file                                           |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
styles_hash: d2cc3c66833a5a85
