src/tests/snapshots/gitu__tests__deleted_file.snap
---
source: src/tests/mod.rs
expression: ctx.redact_buffer()
---
▌main                                                                           |
                                                                                |
 Unstaged changes (1)                                                           |
 deleted    new-file…                                                           |
                                                                                |
 Recent commits                                                                 |
 b00a756 main add new-file                                                      |
 b66a0bf origin/main add initial-file                                           |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
styles_hash: f804228263ab3b2e
