src/tests/snapshots/gitu__tests__delta_highlighted.snap
---
source: src/tests/mod.rs
assertion_line: 433
expression: ctx.redact_buffer()
---
 On branch main                                                                 |
 Your branch is ahead of 'origin/main' by 1 commit(s).                          |
                                                                                |
 Unstaged changes (1)                                                           |
▌modified   delta-test.rs                                                       |
▌@@ -1,3 +1,3 @@                                                                |
▌fn main() {                                                                    |
▌-    println!("Hey");                                                          |
▌+    println!("Bye");                                                          |
▌ }                                                                             |
                                                                                |
 Recent commits                                                                 |
 1952748 main add delta-test.rs                                                 |
 b66a0bf origin/main add initial-file                                           |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
styles_hash: f13279b88305834a
