src/tests/snapshots/gitu__tests__fetch_all.snap
---
source: src/tests/mod.rs
expression: ctx.redact_buffer()
---
▌main                                                                           |
                                                                                |
 Recent commits                                                                 |
 b66a0bf main add initial-file                                                  |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
────────────────────────────────────────────────────────────────────────────────|
$ git fetch --all --jobs 10                                                     |
From file://                                                                     
   b66a0bf..d07f2d3  main       -> origin/main                                  |
styles_hash: ad970e433b6394e2
