src/tests/snapshots/gitu__tests__go_down_past_collapsed.snap
---
source: src/tests/mod.rs
expression: ctx.redact_buffer()
---
 main                                                                           |
                                                                                |
 Unstaged changes (2)                                                           |
 modified   file-one…                                                           |
▌modified   file-two…                                                           |
                                                                                |
 Recent commits                                                                 |
 e45938a main add file-two                                                      |
 b3cf8e8 add file-one                                                           |
 b66a0bf origin/main add initial-file                                           |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
styles_hash: ff5e76874e5b3a6b
